<resources>

    <string name="app_name">Good Food</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="noti_1_key" translatable="false">noti_1</string>
    <string name="noti_2_key" translatable="false">noti_2</string>
    <string name="noti_3_key" translatable="false">noti_3</string>
    <string name="privacy_1_key" translatable="false">privacy_1</string>
    <string name="privacy_2_key" translatable="false">privacy_2</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="pref_full_name_summary">Full Name</string>
    <string name="pref_full_name_key">name</string>
    <string name="pref_full_name_default">Long Hoang</string>
    <string name="pref_bio_summary">Bio</string>
    <string name="pref_bio_key">bio</string>
    <string name="pref_bio_default">141 chien thang</string>
    <string name="pref_email_summary">Email</string>
    <string name="pref_email_key">email</string>
    <string name="pref_email_default">gmail@longtinder.com</string>
    <string name="pref_phone_summary">Phone</string>
    <string name="pref_phone_key">phone</string>
    <string name="pref_phone_default">+0 123 456 789</string>
    <string name="title_activity_fragment_login">fragment_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">295997144789675</string>
    <string name="fb_login_protocol_scheme">fb295997144789675</string>
    <string name="prompt_info_title">Fingerprint Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="btn_back">Back</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="hint_email">Enter your email here</string>
    <string name="lbl_forgot_password">Forgot Password</string>
</resources>
