<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <PreferenceCategory
        android:title="Push Notification"
        app:iconSpaceReserved="false"
        />
    <SwitchPreferenceCompat
            android:title="Notify me for followers"
            android:defaultValue="@bool/noti_1_default"
        android:key="@string/noti_1_key"
        app:iconSpaceReserved="false"
        />
    <SwitchPreferenceCompat
        android:title="When someone send a message"
        android:defaultValue="@bool/noti_2_default"
        app:iconSpaceReserved="false"
        android:key="@string/noti_2_key"/>
    <SwitchPreferenceCompat
        android:title="When someone do live cooking"
        android:defaultValue="@bool/noti_3_default"
        android:key="@string/noti_3_key"
        app:iconSpaceReserved="false"/>
    <PreferenceCategory
        android:title="Privacy Settings"
        app:iconSpaceReserved="false"

        />
    <SwitchPreferenceCompat
        android:title="Followers can see my saved recipes"
        android:defaultValue="@bool/privacy_1_default"
        app:iconSpaceReserved="false"
        android:key="@string/privacy_1_key"
        android:summary="If disabled, you won't be able to see recipes saved by other profiles. Leave this enabled to share your collected recipes to others."/>
    <SwitchPreferenceCompat
        android:title="Followers can see profiles I follow"
        android:defaultValue="@bool/privacy_2_default"
        app:iconSpaceReserved="false"
        android:key="@string/privacy_2_key"/>
    <Preference
        android:title="Change Password"
        app:iconSpaceReserved="false"
        android:selectable="true"
        >

    </Preference>
</PreferenceScreen>